--- a/.lintstagedrc.yaml
+++ b/.lintstagedrc.yaml
@@ -1,3 +1,3 @@
-"*.{ts,js}": eslint
+"*.{ts,tsx,js,jsx}": eslint
 "*.md": markdownlint
-"*.{ts,js,json,yaml,yml,md}": prettier
+"*.{s,tsx,js,jsx,json,yaml,yml,md,html}": prettier
