--- a/package.json
+++ b/package.json
@@ -1,98 +1,65 @@
 {
-  "name": "@byndyusoft/typescript-template",
+  "name": "kt-web",
   "version": "0.0.0-development",
-  "description": "Base template for TypeScript packages",
-  "homepage": "https://github.com/Byndyusoft/node-typescript-template#readme",
+  "private": true,
+  "description": "Unofficial KinoTrend Web Version",
+  "homepage": "https://github.com/KillWolfVlad/kt-web#readme",
   "bugs": {
-    "url": "https://github.com/Byndyusoft/node-typescript-template/issues"
+    "url": "https://github.com/KillWolfVlad/kt-web/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Byndyusoft/node-typescript-template.git"
+    "url": "https://github.com/KillWolfVlad/kt-web.git"
   },
   "license": "Apache-2.0",
-  "author": "Byndyusoft",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist",
-    "src",
-    "!dist/*.tsbuildinfo"
-  ],
+  "author": "KillWolfVlad",
+  "type": "module",
   "scripts": {
-    "prebuild": "shx rm -rf ./dist",
-    "build": "yarn run prebuild && yarn run build:src",
-    "build:src": "tsc --project ./tsconfig.build.json",
+    "build": "tsc && vite build",
     "postinstall": "husky install",
     "lint": "yarn run lint:eslint && yarn run lint:markdown && yarn run lint:prettier",
-    "lint:eslint": "eslint --ignore-path ./.gitignore --max-warnings 0 --ext .ts,.js .",
-    "lint:eslint:fix": "eslint --ignore-path ./.gitignore --fix --ext .ts,.js .",
+    "lint:eslint": "eslint --ignore-path ./.gitignore --max-warnings 0 --ext ts,.tsx,.js,.jsx .",
+    "lint:eslint:fix": "eslint --ignore-path ./.gitignore --fix --ext ts,.tsx,.js,.jsx .",
     "lint:fix": "yarn run lint:eslint:fix && yarn run lint:markdown:fix && yarn run lint:prettier:fix",
     "lint:markdown": "markdownlint --ignore-path ./.gitignore \"./**/*.md\"",
     "lint:markdown:fix": "markdownlint --ignore-path ./.gitignore --fix \"./**/*.md\"",
-    "lint:prettier": "prettier --ignore-path ./.gitignore --check \"./**/*.{ts,js,json,yaml,yml,md}\"",
-    "lint:prettier:fix": "prettier --ignore-path ./.gitignore --write \"./**/*.{ts,js,json,yaml,yml,md}\"",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
-    "test": "jest",
-    "test:cov": "jest --coverage"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "./src/**/*.ts",
-      "!**/index.ts"
-    ],
-    "coverageDirectory": "<rootDir>/coverage",
-    "coverageReporters": [
-      "lcov",
-      "text"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "resetMocks": true,
-    "roots": [
-      "<rootDir>/test"
-    ],
-    "setupFilesAfterEnv": [
-      "jest-extended/all"
-    ],
-    "testEnvironment": "node",
-    "testRegex": ".*\\.test\\.ts$",
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    }
+    "lint:prettier": "prettier --ignore-path ./.gitignore --check \"./**/*.{ts,tsx,js,jsx,json,yaml,yml,md,html}\"",
+    "lint:prettier:fix": "prettier --ignore-path ./.gitignore --write \"./**/*.{ts,tsx,js,jsx,json,yaml,yml,md,html}\"",
+    "start": "vite dev --host"
   },
   "dependencies": {
-    "tslib": "^2.4.0"
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@fontsource/roboto": "5.0.3",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.13.5",
+    "@tanstack/react-query": "4.29.14",
+    "@tanstack/react-query-devtools": "4.29.14",
+    "axios": "1.4.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "use-local-storage-state": "18.3.3"
   },
   "devDependencies": {
-    "@byndyusoft/eslint-config": "2.2.1",
-    "@byndyusoft/tsconfig": "1.2.0",
-    "@commitlint/cli": "17.3.0",
-    "@commitlint/config-conventional": "17.3.0",
-    "@types/jest": "29.2.4",
-    "@types/node": "14.18.36",
-    "eslint": "8.30.0",
-    "husky": "8.0.2",
-    "jest": "29.3.1",
-    "jest-extended": "3.2.0",
-    "lint-staged": "13.1.0",
-    "markdownlint-cli": "0.32.2",
-    "pinst": "3.0.0",
-    "prettier": "2.8.1",
-    "prettier-plugin-packagejson": "2.3.0",
-    "semantic-release": "19.0.5",
-    "shx": "0.3.4",
-    "ts-jest": "29.0.3",
-    "typescript": "4.9.4"
+    "@byndyusoft/eslint-config": "2.4.1",
+    "@byndyusoft/tsconfig": "2.0.0-rc.1",
+    "@commitlint/cli": "17.6.5",
+    "@commitlint/config-conventional": "17.6.5",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "@vitejs/plugin-react-swc": "3.3.2",
+    "eslint": "8.43.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.2",
+    "markdownlint-cli": "0.35.0",
+    "prettier": "2.8.8",
+    "prettier-plugin-packagejson": "2.4.3",
+    "typescript": "5.1.3",
+    "vite": "4.3.9",
+    "vite-plugin-pwa": "0.16.4"
   },
-  "packageManager": "yarn@4.0.0-rc.34",
+  "packageManager": "yarn@4.0.0-rc.45",
   "engines": {
-    "node": ">=14"
-  },
-  "publishConfig": {
-    "access": "public"
+    "node": ">=18"
   }
 }
