--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,6 +24,8 @@ jobs:
           node-version: lts/*
 
       - run: yarn run build
+        env:
+          VITE_GIT_COMMIT_SHA: ${{ github.sha }}
 
       - uses: actions/configure-pages@v3
 
